# Azure-Kinect-Sensor-SDK

src/sdk/: k4a.c
src/usbcommand/: usbcommand.c
tests/CaptureSync/: CMakeLists.txt
tests/CaptureSync/perf/: CMakeLists.txt  captureperf.cpp
